+ Solution finished. + Needs to be test reviewd.

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Shared/_Layout.cshtml
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Shared/_Layout.cshtml
@@ -3,11 +3,35 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ISMAI - Creditações</title>
+    <title>@ViewData["Title"] - CMA.ISMAI.Solutions.Creditacoes.UI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CMA.ISMAI.Solutions.Creditacoes.UI</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Creditacao" asp-action="Create">Criar Processo</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
@@ -16,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcREjRU92CrlNHKrv-ayPwMjMJoqGZB5GR_7eEsMPRa8wRbglSXI" />&copy; 2020 - Carlos Miguel Campos - A029216 
+            &copy; 2020 - CMA.ISMAI.Solutions.Creditacoes.UI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
