+ One engine per microservice implemented

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Shared/_Layout.cshtml
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Creditacao" asp-action="Create">Criar Processo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="https://localhost:5001/hc-ui#/healthchecks">HealthChecks</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -37,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - CMA.ISMAI.Solutions.Creditacoes.UI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - Creditações - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
