--- a/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Creditacao/Create.cshtml
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Creditacao/Create.cshtml
@@ -1,5 +1,4 @@
 ﻿@model CMA.ISMAI.Solutions.Creditacoes.UI.Models.CreditacaoDto
-
 @{
     ViewData["Title"] = "Processo de Creditações";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,6 +9,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <center><h3><strong>@TempData["Process_status"]</strong></h3></center>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="StudentName" class="control-label"></label>
