--- a/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Creditacao/Create.cshtml
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Creditacao/Create.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
-            <center><h3><strong>@TempData["Process_status"]</strong></h3></center>
+            <center><h3><strong id="creditacaoSubmit_Result">@TempData["Process_status"]</strong></h3></center>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="StudentName" class="control-label"></label>
@@ -37,7 +37,7 @@
                 <span asp-validation-for="Documents" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input id="submitCreditacao" type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
