--- a/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Creditacao/Create.cshtml
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Creditacao/Create.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsCet" /> @Html.DisplayNameFor(model => model.IsCet)
+                    <input class="form-check-input" asp-for="IsCetOrOtherCondition" /> @Html.DisplayNameFor(model => model.IsCetOrOtherCondition)
                 </label>
             </div>
             <div class="form-group">
