+ Update Timer configuration to retrive tasks

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Home/Index.cshtml
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Home/Index.cshtml
@@ -46,7 +46,8 @@
             </div>
             <div class="col-3 text-justify">
                 <p><b>Camunda BPM</b></p>
-                Trello é uma ferramenta de colaboração que organiza seus projetos em quadros. De relance, Trello informa o que está sendo trabalhado, quem está trabalhando em quê, e onde algo está em um processo.
+                Construído para desenvolvedores usando uma abordagem baseada em padrões, o software de automação de processos Camunda é de código aberto, altamente escalável e projetado para permitir que equipes de negócios e de TI colaborem na automação de processos.<br/>
+                Nossas ferramentas de automação de fluxo de trabalho e decisão permitem que as equipes criem aplicativos de software de forma mais flexível, colaborativa e eficiente, ganhando a agilidade, visibilidade e escala de negócios necessárias para impulsionar a transformação digital.
             </div>
         </div>
     </div>
