+ Website updated with portuguese translation

--- a/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Home/Index.cshtml
+++ b/CMA.ISMAI.Solutions.Creditacoes.UI/Views/Home/Index.cshtml
@@ -2,54 +2,36 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Bem-Vindo!</h1>
-    <p>Projeto de Mestrado de Carlos Miguel Castro Azevedo Campos - A029216@ismai.pt - Curso Tecnologias da Informação, Comunicação e Multimédia.</p>
-    <img src="~/img/bpmn.PNG" />
-    <hr />
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 text-justify">
-                <p><b>BPMN</b></p>
-                A notação BPMN 2.0 é a última palavra em notações para se esquematizar e se comunicar visualmente no contexto do BPM.
-
-                Object Management GroupEssa notação foi criada e aprimorada pela Business Process Management Initiative, que posteriormente se uniu à Object Management Group, uma associação internacional aberta e sem fins lucrativos fundada em 1989.
-
-                A notação BPMN 2.0 foi desenvolvida com o objetivo específico de criar um padrão, uma linguagem comum para modelagem de processos de negócios.
-
-                Assim, ao se desenhar um diagrama de processos, será possível usar símbolos universais que serão entendidos por diversos profissionais que tenham acesso a este padrão internacional de notação.
-
-                Veja algumas dos motivos que levaram a notação BPMN 2.0 a ser tão difundida e aceita por inúmeros profissionais como uma excelente solução para a representação de processos.
-
-                Veja também: Saiba tudo sobre modelagem de processos de negócios.
-
-                A modelagem de processos é uma etapa chave no BPM, podendo ser utilizada para descrever o processo como ele é e também para projetar a versão otimizada.
-
-                Para isto existe a notação BPMN (o significado é Business Process Model and Notation). Trata-se de uma notação que ilustra o processo BPMN de uma maneira simples e clara, pensada tanto para gerentes quanto para profissionais técnicos, analistas, desenvolvedores e funcionários em geral.
+    <div class="text-center">
+        <h1 class="display-4">Bem-Vindo!</h1>
+        <p>Projeto de Mestrado de Carlos Miguel Castro Azevedo Campos - A029216@ismai.pt - Curso Tecnologias da Informação, Comunicação e Multimédia.</p>
+        <img src="~/img/bpmn.PNG" />
+        <hr />
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12 text-justify">
+                    <p><b>BPMN</b></p>
+                    O BPMN (Business Process Model and Notation), teve a sua primeira versão lançada em maio de 2004 pela BPMI&iGrafx, criadora desta notação.
+                    <br /> <br />Em 2005, a BPMI&iGrafx, fundiu-se com a Object Management Group, uma entidade internacional sem fins lucrativos que regulamenta padrões tecnológicos, para em janeiro de 2008 lançar a versão 1.1, em janeiro de 2009 a versão 1.2 e em janeiro de 2011, a versão 2.0, sendo esta a sua versão atual. (Object Management Group®, s.d.)
+                    <br /> <br />Cada símbolo nesta notação representa algo que acontece ou pode acontecer dentro de um processo.
+                </div>
+            </div>
+        </div>
+        <hr />
+        <div class="container">
+            <div class="row">
+                <div class="col-4 text-justify">
+                    <p><b>Docker</b></p>
+                    O Docker possibilita o empacotamento de uma aplicação ou ambiente inteiro dentro de um container, e a partir desse momento o ambiente inteiro torna-se portável para qualquer outro Host que contenha o Docker instalado.
+                </div>
+                <div class="col-4 text-justify">
+                    <p><b>MicroServiços</b></p>
+                    O termo "Arquitetura de Microsserviços (Microservice Architecture)" surgiu nos últimos anos para descrever uma maneira específica de desenvolver software como suites de serviços com deploy independente.
+                </div>
+                <div class="col-4 text-justify">
+                    <p><b>Camunda BPM</b></p>
+                    O Camunda BPM, é uma ferramenta Open-source feita em Java derivada do Activiti, onde o seu maior objetivo é efetuar a união entre área de negócios e programadores.
+                </div>
             </div>
         </div>
     </div>
-    <hr />
-    <div class="container">
-        <div class="row">
-            <div class="col-3 text-justify">
-                <p><b>Trello</b></p>
-                Trello é uma ferramenta de colaboração que organiza seus projetos em quadros. De relance, Trello informa o que está sendo trabalhado, quem está trabalhando em quê, e onde algo está em um processo.
-            </div>
-            <div class="col-3 text-justify">
-                <p><b>Docker</b></p>
-                O Docker possibilita o empacotamento de uma aplicação ou ambiente inteiro dentro de um container, e a partir desse momento o ambiente inteiro torna-se portável para qualquer outro Host que contenha o Docker instalado.
-            </div>
-            <div class="col-3 text-justify">
-                <p><b>MicroServiços</b></p>
-                O termo "Arquitetura de Microsserviços (Microservice Architecture)" surgiu nos últimos anos para descrever uma maneira específica de desenvolver software como suites de serviços com deploy independente.
-            </div>
-            <div class="col-3 text-justify">
-                <p><b>Camunda BPM</b></p>
-                Construído para desenvolvedores usando uma abordagem baseada em padrões, o software de automação de processos Camunda é de código aberto, altamente escalável e projetado para permitir que equipes de negócios e de TI colaborem na automação de processos.<br/>
-                Nossas ferramentas de automação de fluxo de trabalho e decisão permitem que as equipes criem aplicativos de software de forma mais flexível, colaborativa e eficiente, ganhando a agilidade, visibilidade e escala de negócios necessárias para impulsionar a transformação digital.
-            </div>
-        </div>
-    </div>
-
-</div>
